cargo-features = ["panic-immediate-abort"]

[workspace]
members = [
    "bluepill-prog",
    "picoprog",
    "serprog"
]
resolver = "2"

[workspace.dependencies]
assign-resources = "0.5.0"
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section"] }
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"
defmt = "1"
defmt-rtt = "1"
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "nightly"] }
embassy-futures = "0.1.2"
embassy-rp = { version = "0.8.0", features = ["unstable-pac", "time-driver", "critical-section-impl", "rom-func-cache", "rom-v2-intrinsics", "rp2040"] }
embassy-stm32 = { version = "0.4.0" }
embassy-sync = "0.7.2"
embassy-time = "0.5.0"
embassy-usb = { version = "0.5.1", features = ["max-handler-count-6", "max-interface-count-6"] }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
futures = { version = "0.3.31", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }
heapless = { version = "0.9.1", features = ["portable-atomic-critical-section", "ufmt"] }
log = "0.4.28"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
portable-atomic = { version = "1.11.1", features = ["critical-section"] }
serprog = { path = "./serprog" }
static_cell = "2.1.1"
stm32-fmc = { version = "0.4.0" }
tock-registers = "0.10.0"
ufmt = "0.2.0"
zerocopy = { version = "0.8", features = ["derive"] }
num_enum = { version = "0.7.4", default-features = false }

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "8394e1320844f6a1342f1bff10215cfd4643fe3a" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "8394e1320844f6a1342f1bff10215cfd4643fe3a" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "8394e1320844f6a1342f1bff10215cfd4643fe3a" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "8394e1320844f6a1342f1bff10215cfd4643fe3a" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "8394e1320844f6a1342f1bff10215cfd4643fe3a" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "8394e1320844f6a1342f1bff10215cfd4643fe3a" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "8394e1320844f6a1342f1bff10215cfd4643fe3a" }

[profile.release]
debug = true
incremental = false
codegen-units = 1
opt-level = "s"
lto = "fat"
panic = "immediate-abort"
