[package]
name = "serprog"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
embassy-usb.workspace = true
embassy-futures.workspace = true
embedded-hal.workspace = true
embedded-hal-async.workspace = true
#log.workspace = true
defmt.workspace = true
num_enum.workspace = true
tock-registers.workspace = true
zerocopy.workspace = true
